# Taster

./: .gitignore  CHANGELOG.md  DATA_SCIENCE_LEARNINGS.md  PHASE_I_STATUS.md  README.md  VIDEO_CLASSIFICATION_GUIDE.md  burst_detector.py  classify_folder.bat  clear_failed_for_retry.py  config.yaml  generate_taste_profile.py  learn_from_reviews.py  mcp_server.py  pyproject.toml  quick_start_v4.py  reprocess_failed.py  requirements.txt  serve.py  setup_sommelier.py  taste_classify.py  taste_classify_gemini_v4.py  taste_preferences.json  taste_preferences_generated.json  taste_trainer.py  taste_trainer_pairwise_v4.py
.claude/: settings.local.json
.github/workflows/: publish.yml
assets/: demo.html
examples/: README.md
profiles/: code-review.json  default-documents.json  default-photos.json  product-photos.json  student-essays.json  vacation-social-media.json
sommelier/: __init__.py  cli.py  compat.py  dirs.py
sommelier/api/: app.py
sommelier/core/: config.py  models.py
sommelier/features/: embeddings.py
sommelier/mcp/: server.py
sommelier/pipelines/: mixed_pipeline.py
sommelier/training/: __init__.py  session.py  synthesizer.py
src/: __init__.py
src/api/: __init__.py  app.py  models.py
src/classification/: classifier.py  prompt_builder.py  routing.py
src/core/: __init__.py  ai_client.py  cache.py  config.py  file_utils.py  logging_config.py  media_prep.py  models.py  profiles.py
taster/: __init__.py  cli.py  compat.py  dirs.py
tests/: __init__.py  test_api.py  test_cache.py  test_classification.py  test_classifier_extended.py  test_cli.py  test_compat.py  test_config.py  test_config_resolution.py  test_dimensions.py  test_dirs.py  test_end_to_end.py  test_error_tracking.py  test_features.py  test_file_utils.py  test_integration_smoke.py  test_mcp_handlers.py  test_mcp_training.py  test_models_extended.py  test_pipelines.py  test_profiles_extended.py  test_providers.py  test_routing_extended.py  test_synthesizer.py  test_training_sampler.py  test_training_session.py
(+59 files in other folders)
